--- a/src/main/resources/templates/h5/addSubcribe.html
+++ b/src/main/resources/templates/h5/addSubcribe.html
@@ -5,125 +5,228 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>订阅出版社</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="format-detection" content="telephone=no,email=no,address=no">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-touch-fullscreen" content="yes">
-  <meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes">
-  <meta name="msapplication-tap-highlight" content="no">
-  <!--去掉winphone系统a、input标签被点击时产生的半透明灰色背景-->
-  <!--<link rel="Shortcut Icon" href="static/img/favicon.ico" />-->
+    <title>订阅出版社</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="format-detection" content="telephone=no,email=no,address=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes">
+    <meta name="msapplication-tap-highlight" content="no">
+    <!--去掉winphone系统a、input标签被点击时产生的半透明灰色背景-->
+    <!--<link rel="Shortcut Icon" href="static/img/favicon.ico" />-->
     <link rel="stylesheet" th:href="@{/style/core.css}">
     <script type="text/javascript" charset="utf-8"
             th:src="@{/toongine20190104.js}"></script>
     <script th:src="@{/layui/jquery.min.js}"></script>
     <script th:src="@{/layui/layui.js}"></script>
     <script type="text/javascript" th:src="@{/common.js}"></script>
-  <style>
-    body {
-        width: 100%;
-        height: 100%;
-        background: #141517;
-    }
+    <style>
+        body {
+            width: 100%;
+            height: 100%;
+            background: #141517;
+        }
 
-    .sub-press .content {
-        padding: 0.37333rem 0.42667rem;
-        background: #1f2022;
-    }
+        .sub-press .content {
+            padding: 0.37333rem 0.42667rem;
+            background: #1f2022;
+        }
 
-    .sub-press .content .title {
-        font-size: 0.32rem;
-        color: #8e8e93;
-        line-height: 0.45333rem;
-        margin-bottom: 0.16rem;
-    }
+        .sub-press .content .title {
+            font-size: 0.32rem;
+            color: #8e8e93;
+            line-height: 0.45333rem;
+            margin-bottom: 0.16rem;
+        }
 
-    .sub-press .content .input {
-        font-size: 0.42667rem;
-        color: #fff;
-    }
+        .sub-press .content .input {
+            font-size: 0.42667rem;
+            color: #fff;
+        }
 
-    .sub-press .content .input input {
-        width: 100%;
-        height: 0.58667rem;
-        font-size: 0.42667rem;
-        line-height: 0.58667rem;
-        color: #fff;
-    }
+        .sub-press .content .input input {
+            width: 100%;
+            height: 0.58667rem;
+            font-size: 0.42667rem;
+            line-height: 0.58667rem;
+            color: #fff;
+        }
 
-    .sub-press .press-btn {
-        width: 8.72rem;
-        border: 1px solid #979797;
-        border-radius: 0.05333rem;
-        font-size: 0.48rem;
-        color: #fff;
-        text-align: center;
-        line-height: 1.33333rem;
-        margin: 1.33333rem auto;
-    }
-  </style>
+        .sub-press .press-btn {
+            width: 8.72rem;
+            border: 1px solid #979797;
+            border-radius: 0.05333rem;
+            font-size: 0.48rem;
+            color: #fff;
+            text-align: center;
+            line-height: 1.33333rem;
+            margin: 1.33333rem auto;
+        }
+    </style>
 
     <script type="text/javascript" th:inline="javascript">
-    (function(d,f){var s=d.document;var c=s.documentElement;var m=s.querySelector('meta[name="viewport"]');var n=s.querySelector('meta[name="flexible"]');var a=0;var r=0;var b=0;var l;var e=f.flexible||(f.flexible={});if(n){var j=n.getAttribute("content");if(j){var q=j.match(/initial\-dpr=([\d\.]+)/);var h=j.match(/maximum\-dpr=([\d\.]+)/);if(q){a=parseFloat(q[1]);r=parseFloat((1/a).toFixed(2))}if(h){a=parseFloat(h[1]);r=parseFloat((1/a).toFixed(2))}}}if(!a&&!r){var p=d.navigator.appVersion.match(/android/gi);var o=d.navigator.appVersion.match(/iphone/gi);var k=d.devicePixelRatio;if(k>=3&&(!a||a>=3)){a=3}else{if(k>=2&&(!a||a>=2)){a=2}else{a=1}}r=1/a}c.setAttribute("data-dpr",a);m=s.createElement("meta");m.setAttribute("name","viewport");m.setAttribute("content","width=device-width, initial-scale="+r+", maximum-scale="+r+", minimum-scale="+r+", user-scalable=no");if(c.firstElementChild){c.firstElementChild.appendChild(m)}else{var g=s.createElement("div");g.appendChild(m);s.write(g.innerHTML)}function i(){var u=c.getBoundingClientRect().width;if(u/a>540){u=540*a}var w=u/10;c.style.fontSize=w+"px";e.rem=d.rem=w;var v=parseFloat(c.style.fontSize),t=parseFloat(window.getComputedStyle(c).getPropertyValue("font-size"));console.log("flexible.refreshRem: fontSize && finalFontSize => ",v,t);if(v!==t){c.style.fontSize=v*(v/t)+"px";console.log("flexible.refreshRem.fixed: fontSize  => ",c.style.fontSize)}}d.addEventListener("resize",function(){clearTimeout(l);l=setTimeout(i,300)},false);d.addEventListener("pageshow",function(t){if(t.persisted){clearTimeout(l);l=setTimeout(i,300)}},false);if(s.readyState==="complete"){s.body.style.fontSize=12*a+"px"}else{s.addEventListener("DOMContentLoaded",function(t){s.body.style.fontSize=12*a+"px"},false)}i();e.dpr=d.dpr=a;e.refreshRem=i;e.rem2px=function(u){var t=parseFloat(u)*this.rem;if(typeof u==="string"&&u.match(/rem$/)){t+="px"}return t};e.px2rem=function(u){var t=parseFloat(u)/this.rem;if(typeof u==="string"&&u.match(/px$/)){t+="rem"}return t}})(window,window["lib"]||(window["lib"]={}));
-
-    var userId = [[${userId}]];
-    // toongine.user.getUserInfo({
-    //     callback: function (res) {
-    //         userId = res.data.myTmail;
-    //     }
-    // })
-
-    /**
-     * 保存标签
-     */
-    function addSub() {
-        var publishTemail = document.getElementById('publishTemail').value;
-        $.ajax({
-            type: "POST",
-            data: JSON.stringify({
-                userId: userId,
-                publishTemail: publishTemail
-            }),
-            url: "/piper/publish/subscribe",
-            contentType: "application/json; charset=utf-8",
-            dataType: "json",
-            beforeSend:function(xhr){
-                xhr.setRequestHeader('Content-Type','application/json');
-            },
-            success: function (res) {
-                alert(res.msg);
-                // var txt =res.msg;
-                // layer.alert('<span style="font-size: 30px;">'+txt+'</span>', {
-                //     skin: 'layui-layer-lan' //样式类名
-                //     ,closeBtn: 0
-                //     ,title:['提示', 'font-size:30px;']
-                //     ,area:['400px', '300px']
-                // });
-                if (res.code == 200) {
-                    toongine.app.shutdown({
-                        callback: function (res) {
-                            console.log('res：' + res.code)
-                        }
-                    })
+        (function (d, f) {
+            var s = d.document;
+            var c = s.documentElement;
+            var m = s.querySelector('meta[name="viewport"]');
+            var n = s.querySelector('meta[name="flexible"]');
+            var a = 0;
+            var r = 0;
+            var b = 0;
+            var l;
+            var e = f.flexible || (f.flexible = {});
+            if (n) {
+                var j = n.getAttribute("content");
+                if (j) {
+                    var q = j.match(/initial\-dpr=([\d\.]+)/);
+                    var h = j.match(/maximum\-dpr=([\d\.]+)/);
+                    if (q) {
+                        a = parseFloat(q[1]);
+                        r = parseFloat((1 / a).toFixed(2))
+                    }
+                    if (h) {
+                        a = parseFloat(h[1]);
+                        r = parseFloat((1 / a).toFixed(2))
+                    }
                 }
             }
-        });
-    }
-  </script>
+            if (!a && !r) {
+                var p = d.navigator.appVersion.match(/android/gi);
+                var o = d.navigator.appVersion.match(/iphone/gi);
+                var k = d.devicePixelRatio;
+                if (k >= 3 && (!a || a >= 3)) {
+                    a = 3
+                } else {
+                    if (k >= 2 && (!a || a >= 2)) {
+                        a = 2
+                    } else {
+                        a = 1
+                    }
+                }
+                r = 1 / a
+            }
+            c.setAttribute("data-dpr", a);
+            m = s.createElement("meta");
+            m.setAttribute("name", "viewport");
+            m.setAttribute("content", "width=device-width, initial-scale=" + r + ", maximum-scale=" + r + ", minimum-scale=" + r + ", user-scalable=no");
+            if (c.firstElementChild) {
+                c.firstElementChild.appendChild(m)
+            } else {
+                var g = s.createElement("div");
+                g.appendChild(m);
+                s.write(g.innerHTML)
+            }
+
+            function i() {
+                var u = c.getBoundingClientRect().width;
+                if (u / a > 540) {
+                    u = 540 * a
+                }
+                var w = u / 10;
+                c.style.fontSize = w + "px";
+                e.rem = d.rem = w;
+                var v = parseFloat(c.style.fontSize),
+                    t = parseFloat(window.getComputedStyle(c).getPropertyValue("font-size"));
+                console.log("flexible.refreshRem: fontSize && finalFontSize => ", v, t);
+                if (v !== t) {
+                    c.style.fontSize = v * (v / t) + "px";
+                    console.log("flexible.refreshRem.fixed: fontSize  => ", c.style.fontSize)
+                }
+            }
+
+            d.addEventListener("resize", function () {
+                clearTimeout(l);
+                l = setTimeout(i, 300)
+            }, false);
+            d.addEventListener("pageshow", function (t) {
+                if (t.persisted) {
+                    clearTimeout(l);
+                    l = setTimeout(i, 300)
+                }
+            }, false);
+            if (s.readyState === "complete") {
+                s.body.style.fontSize = 12 * a + "px"
+            } else {
+                s.addEventListener("DOMContentLoaded", function (t) {
+                    s.body.style.fontSize = 12 * a + "px"
+                }, false)
+            }
+            i();
+            e.dpr = d.dpr = a;
+            e.refreshRem = i;
+            e.rem2px = function (u) {
+                var t = parseFloat(u) * this.rem;
+                if (typeof u === "string" && u.match(/rem$/)) {
+                    t += "px"
+                }
+                return t
+            };
+            e.px2rem = function (u) {
+                var t = parseFloat(u) / this.rem;
+                if (typeof u === "string" && u.match(/px$/)) {
+                    t += "rem"
+                }
+                return t
+            }
+        })(window, window["lib"] || (window["lib"] = {}));
+
+        var userId = [[${userId}]];
+        // toongine.user.getUserInfo({
+        //     callback: function (res) {
+        //         userId = res.data.myTmail;
+        //     }
+        // })
+
+        /**
+         * 保存标签
+         */
+        function addSub() {
+            var publishTemail = document.getElementById('publishTemail').value;
+            $.ajax({
+                type: "POST",
+                data: JSON.stringify({
+                    userId: userId,
+                    publishTemail: publishTemail
+                }),
+                url: pipercontext + "/publish/subscribe",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader('Content-Type', 'application/json');
+                },
+                success: function (res) {
+                    alert(res.msg);
+                    // var txt =res.msg;
+                    // layer.alert('<span style="font-size: 30px;">'+txt+'</span>', {
+                    //     skin: 'layui-layer-lan' //样式类名
+                    //     ,closeBtn: 0
+                    //     ,title:['提示', 'font-size:30px;']
+                    //     ,area:['400px', '300px']
+                    // });
+                    if (res.code == 200) {
+                        toongine.app.shutdown({
+                            callback: function (res) {
+                                console.log('res：' + res.code)
+                            }
+                        })
+                    }
+                }
+            });
+        }
+    </script>
 </head>
 
 <body>
-    <div class="sub-press">
-        <div class="content">
-            <p class="title">要订阅的出版社邮箱</p>
-            <!--<p class="input">p. <input type="text" placeholder="请输入出版社邮箱"> @systoontest.com</p>-->
-            <p class="input"> <input id="publishTemail" name="publishTemail" type="text" placeholder="请粘贴出版社邮箱"></p>
-        </div>
-        <div class="press-btn" onclick="addSub()">
-            去订阅
-        </div>
+<div class="sub-press">
+    <div class="content">
+        <p class="title">要订阅的出版社邮箱</p>
+        <!--<p class="input">p. <input type="text" placeholder="请输入出版社邮箱"> @systoontest.com</p>-->
+        <p class="input"><input id="publishTemail" name="publishTemail" type="text" placeholder="请粘贴出版社邮箱"></p>
     </div>
+    <div class="press-btn" onclick="addSub()">
+        去订阅
+    </div>
+</div>
 </body>
 
 </html>
