--- a/src/main/resources/templates/h5/createPublisher.html
+++ b/src/main/resources/templates/h5/createPublisher.html
@@ -94,7 +94,7 @@
                     userId: userId,
                     name: name
                 }),
-                url: "/piper/publish/create",
+                url: pipercontext+"/publish/create",
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
                 beforeSend:function(xhr){
