--- a/src/main/resources/templates/h5/helpupload.html
+++ b/src/main/resources/templates/h5/helpupload.html
@@ -12,6 +12,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <title>邮件组账号上传说明</title>
     <script th:src="@{/clipboard.min.js}"></script>
+
 </head>
 <body>
 <h2>  上传说明 </h2>
@@ -21,7 +22,7 @@
 </body>
 <script>
 function copy() {
-    var clipboard = new Clipboard('.copy');
+    var clipboard = new ClipboardJS('.copy');
     clipboard.on('success', e => {
         alert('复制成功');
         // 释放内存
@@ -33,7 +34,6 @@ function copy() {
         // 释放内存
         clipboard.destroy();
     });
-
 }
 </script>
 </html>
