--- a/src/main/resources/templates/h5/helpupload.html
+++ b/src/main/resources/templates/h5/helpupload.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-<h2>  上传说明 </h2>
+<h2>  账号上传说明 </h2>
 <p th:text="'为邮件组 ' + ${ptemail} + ' 上传订阅者账号，请在pc端的浏览器输入以下地址：' "/>
 <p th:text="${url}" id="url">1</p>
 <p class="copy" onClick="copy()" data-clipboard-target="#url">复制</p>
