--- a/src/main/resources/templates/h5/helpupload.html
+++ b/src/main/resources/templates/h5/helpupload.html
@@ -16,9 +16,10 @@
 </head>
 <body>
 <h2>  账号上传说明 </h2>
-<p th:text="'为邮件组 ' + ${ptemail} + ' 上传订阅者账号，请在pc端的浏览器输入以下地址：' "/>
-<p th:text="${url}" id="url">1</p>
-<p class="copy" onClick="copy()" data-clipboard-target="#url">复制</p>
+<p th:text="'为邮件组 ' + ${pname}+'<'+${ptemail} + '> 上传订阅者账号，请在pc端的浏览器输入以下地址：' "/>
+<p style="color: red">该链接5分钟内有效</p>
+<p th:text="${url}" style="color:blue" id="url">1</p>
+<p class="copy" onClick="copy()" data-clipboard-target="#url">点此复制</p>
 </body>
 <script>
 function copy() {
