--- a/src/main/resources/templates/h5/uploadpage.html
+++ b/src/main/resources/templates/h5/uploadpage.html
@@ -5,138 +5,77 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>已订阅列表</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="format-detection" content="telephone=no,email=no,address=no">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-touch-fullscreen" content="yes">
-  <meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes">
-  <meta name="msapplication-tap-highlight" content="no">
-  <!--去掉winphone系统a、input标签被点击时产生的半透明灰色背景-->
-  <!--<link rel="Shortcut Icon" href="static/img/favicon.ico" />-->
+    <title>已订阅列表</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="format-detection" content="telephone=no,email=no,address=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes">
+    <meta name="msapplication-tap-highlight" content="no">
+    <!--去掉winphone系统a、input标签被点击时产生的半透明灰色背景-->
+    <!--<link rel="Shortcut Icon" href="static/img/favicon.ico" />-->
     <link rel="stylesheet" th:href="@{/style/core.css}">
     <script type="text/javascript" charset="utf-8"
             th:src="@{/toongine20190104.js}"></script>
     <script th:src="@{/layui/jquery.min.js}"></script>
     <script th:src="@{/layui/layui.js}"></script>
     <script type="text/javascript" th:src="@{/common.js}"></script>
-  <style>
-    body {
-        width: 100%;
-        height: 100%;
-        background: #141517;
-    }
+    <script type="text/javascript" th:src="@{/jquery.form.js}"></script>
 
-    .sub-list ul {
-        background: #1f2022;
-        padding-left: 0.42667rem;
-    }
+    <script type="text/javascript" th:inline="javascript">
+        var uploadurl = [[${uploadurl}]];
 
-    .sub-list ul li {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: row;
-        flex-direction: row;
-        -webkit-box-pack: justify;
-        -webkit-justify-content: space-between;
-        justify-content: space-between;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-        border-bottom: 1px solid #dddee3;
-        padding: 0.32rem 0.42667rem 0.32rem 0;
-    }
-
-    .sub-list ul li:last-child {
-        border-bottom: none;
-    }
-
-    .sub-list ul li .left h3 {
-        font-size: 0.42667rem;
-        font-weight: normal;
-        line-height: 0.58667rem;
-        color: #f8f9fb;
-        margin-bottom: 0.10667rem;
-    }
-
-    .sub-list ul li .left p {
-        font-size: 0.34667rem;
-        color: #8e8e93;
-        line-height: 0.48rem;
-    }
-
-    .sub-list ul li .right {
-        width: 2.08rem;
-        background: #525e87;
-        border-radius: 0.05333rem;
-        font-size: 0.37333rem;
-        color: #fff;
-        text-align: center;
-        line-height: 0.8rem;
-    }
-  </style>
-  <script type="text/javascript" th:inline="javascript">
-    (function(d,f){var s=d.document;var c=s.documentElement;var m=s.querySelector('meta[name="viewport"]');var n=s.querySelector('meta[name="flexible"]');var a=0;var r=0;var b=0;var l;var e=f.flexible||(f.flexible={});if(n){var j=n.getAttribute("content");if(j){var q=j.match(/initial\-dpr=([\d\.]+)/);var h=j.match(/maximum\-dpr=([\d\.]+)/);if(q){a=parseFloat(q[1]);r=parseFloat((1/a).toFixed(2))}if(h){a=parseFloat(h[1]);r=parseFloat((1/a).toFixed(2))}}}if(!a&&!r){var p=d.navigator.appVersion.match(/android/gi);var o=d.navigator.appVersion.match(/iphone/gi);var k=d.devicePixelRatio;if(k>=3&&(!a||a>=3)){a=3}else{if(k>=2&&(!a||a>=2)){a=2}else{a=1}}r=1/a}c.setAttribute("data-dpr",a);m=s.createElement("meta");m.setAttribute("name","viewport");m.setAttribute("content","width=device-width, initial-scale="+r+", maximum-scale="+r+", minimum-scale="+r+", user-scalable=no");if(c.firstElementChild){c.firstElementChild.appendChild(m)}else{var g=s.createElement("div");g.appendChild(m);s.write(g.innerHTML)}function i(){var u=c.getBoundingClientRect().width;if(u/a>540){u=540*a}var w=u/10;c.style.fontSize=w+"px";e.rem=d.rem=w;var v=parseFloat(c.style.fontSize),t=parseFloat(window.getComputedStyle(c).getPropertyValue("font-size"));console.log("flexible.refreshRem: fontSize && finalFontSize => ",v,t);if(v!==t){c.style.fontSize=v*(v/t)+"px";console.log("flexible.refreshRem.fixed: fontSize  => ",c.style.fontSize)}}d.addEventListener("resize",function(){clearTimeout(l);l=setTimeout(i,300)},false);d.addEventListener("pageshow",function(t){if(t.persisted){clearTimeout(l);l=setTimeout(i,300)}},false);if(s.readyState==="complete"){s.body.style.fontSize=12*a+"px"}else{s.addEventListener("DOMContentLoaded",function(t){s.body.style.fontSize=12*a+"px"},false)}i();e.dpr=d.dpr=a;e.refreshRem=i;e.rem2px=function(u){var t=parseFloat(u)*this.rem;if(typeof u==="string"&&u.match(/rem$/)){t+="px"}return t};e.px2rem=function(u){var t=parseFloat(u)/this.rem;if(typeof u==="string"&&u.match(/px$/)){t+="rem"}return t}})(window,window["lib"]||(window["lib"]={}));
-
-    var uploadurl = [[${uploadurl}]];
-    function submitForm() {
-        var excelPath = $("#file").val();
-        if(excelPath == null || excelPath == ''){
-            alert("请选择要上传的Excel文件");
-            return;
-        }else{
-            var fileExtend = excelPath.substring(excelPath.lastIndexOf('.')).toLowerCase();
-            if(fileExtend == '.xls' || fileExtend == '.xlsx'){
-                $("#upload_form").ajaxSubmit({
-                    url:uploadurl,
-                    cache:false,
-                    dataType:'json',
-                    success: function(data) {
-                        alert(data.result);
-                    } ,
-                    error:function(){
-                        alert(data.message);
-                    }
-                });
-            } else {
-                alert("文件格式需为'.xls'格式");
+        function submitForm() {
+            var excelPath = $("#file").val();
+            if (excelPath == null || excelPath == '') {
+                alert("请选择要上传的Excel文件");
                 return;
+            } else {
+                var fileExtend = excelPath.substring(excelPath.lastIndexOf('.')).toLowerCase();
+                if (fileExtend == '.xls' || fileExtend == '.xlsx') {
+                    $("#upload_form").ajaxSubmit({
+                        url: uploadurl,
+                        cache: false,
+                        dataType: 'json',
+                        success: function (data) {
+                            alert(data.msg);
+                        },
+                        error: function () {
+                            alert(data.msg);
+                        }
+                    });
+                } else {
+                    alert("文件格式需为'.xls或xlsx'格式");
+                    return;
+                }
             }
         }
-    }
-</script>
+    </script>
 </head>
 
 <body>
-<div class="form" v-if="show">
+<div align=center>
     <form id="upload_form" th:action="${uploadurl}"
           enctype="multipart/form-data" method="post">
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Excel上传</label>
-            <div class="col-sm-10">
-                <input type="file" id="file" name="file" />
-            </div>
+        <br/>
+        <br/>
+        <h4 th:text="'为邮件组  ' + ${pname}+'<'+${ptemail} + '> 上传订阅号的Excel名单' "/>
+        <br/>
+        <br/>
+        <div>
+        <input type="file" id="file" name="file"/>
+        <br/>
+        <br/>
+        <button type="button" style="width: 100px;height: 50px;background-color:#3b97d7;font-size: large;color:white " onclick="submitForm()">上传Excel</button>
         </div>
-        <input type="hidden" id="token" th:value="${token}" />
-        <div class="form-group btn-box">
-            <button type="button" class="btn btn-success btn-block bgc-color"
-                    onclick="submitForm()">立即上传</button>
-
-            <a th:onclick="${downUrl}"> 上传模板下载</a>
-        </div>
-        <div >
-            每一行: 需要加入的秘邮号
-        </div>
+        <br/>
+        <br/>
+        <br/>
+        <a th:href="${downUrl}"> 下载模板</a>
+        <br/>
+        <br/>
+        <p style="color: red">该链接5分钟内有效</p>
     </form>
-
-    <div class="success" key="registed" v-else v-cloak>
-        <div class="success-text">
-            <p>恭喜上传成功</p>
-        </div>
-    </div>
 </div>
 
 </body>
