修复重复推送

--- a/src/main/resources/templates/h5/helpupload.html
+++ b/src/main/resources/templates/h5/helpupload.html
@@ -14,7 +14,7 @@
     <script th:src="@{/clipboard.min.js}"></script>
 
 </head>
-<body>
+<body bgcolor="white">
 <h2>  账号上传说明 </h2>
 <p th:text="'为邮件组 ' + ${pname}+'<'+${ptemail} + '> 上传订阅者账号，请在pc端的浏览器输入以下地址：' "/>
 <p style="color: red">该链接5分钟内有效</p>
