--- a/src/main/resources/templates/h5/uploadpage.html
+++ b/src/main/resources/templates/h5/uploadpage.html
@@ -53,7 +53,7 @@
     </script>
 </head>
 
-<body>
+<body  bgcolor="white">
 <div align=center>
     <form id="upload_form" th:action="${uploadurl}"
           enctype="multipart/form-data" method="post">
